[gd_scene load_steps=12 format=2]

[ext_resource path="res://scripts/CreateNewLobby.gd" type="Script" id=1]
[ext_resource path="res://resources/images/Background.svg" type="Texture" id=2]
[ext_resource path="res://resources/fonts/gomarice_no_continue.ttf" type="DynamicFontData" id=3]

[sub_resource type="DynamicFont" id=6]
size = 90
outline_size = 3
outline_color = Color( 0.341176, 0.133333, 0.133333, 1 )
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=7]
size = 90
outline_size = 3
outline_color = Color( 0.341176, 0.133333, 0.133333, 1 )
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=8]
size = 90
outline_size = 3
outline_color = Color( 0.341176, 0.133333, 0.133333, 1 )
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=1]
size = 80
outline_size = 3
outline_color = Color( 0.333333, 0.329412, 0.164706, 1 )
font_data = ExtResource( 3 )

[sub_resource type="StyleBoxEmpty" id=2]

[sub_resource type="StyleBoxEmpty" id=3]

[sub_resource type="StyleBoxEmpty" id=4]

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0, 0, 0, 1 )
draw_center = false

[node name="CanvasLayer" type="CanvasLayer"]
script = ExtResource( 1 )
itemList_path = NodePath("MenuBackground/MarginContainer/VBoxContainer/ChooseMapBtn/ScrollItemList/MapList")
scrollItemList_path = NodePath("MenuBackground/MarginContainer/VBoxContainer/ChooseMapBtn/ScrollItemList")
passwordField_path = NodePath("MenuBackground/MarginContainer/VBoxContainer/PasswordField")
buttonContainer_path = NodePath("MenuBackground/MarginContainer/VBoxContainer/VBoxContainer")
chooseMapBtn_path = NodePath("MenuBackground/MarginContainer/VBoxContainer/ChooseMapBtn")

[node name="Background" type="Sprite" parent="."]
position = Vector2( 960, 540 )
scale = Vector2( 1.12, 1 )
texture = ExtResource( 2 )

[node name="DarkBackground" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.639216 )
__meta__ = {
"_edit_use_anchors_": true
}

[node name="MenuBackground" type="ColorRect" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -768.0
margin_top = -432.0
margin_right = 768.0
margin_bottom = 432.0
color = Color( 0.160784, 0.152941, 0.152941, 1 )
__meta__ = {
"_edit_use_anchors_": true
}

[node name="MarginContainer" type="MarginContainer" parent="MenuBackground"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 50.0
margin_top = 100.0
margin_right = -50.0
margin_bottom = -100.0

[node name="VBoxContainer" type="VBoxContainer" parent="MenuBackground/MarginContainer"]
margin_right = 1436.0
margin_bottom = 664.0
custom_constants/separation = 50

[node name="LobbyNameField" type="LineEdit" parent="MenuBackground/MarginContainer/VBoxContainer"]
margin_right = 1436.0
margin_bottom = 101.0
custom_colors/font_color_selected = Color( 0.784314, 0.784314, 0.784314, 1 )
custom_colors/font_color = Color( 0.784314, 0.784314, 0.784314, 1 )
custom_fonts/font = SubResource( 6 )
max_length = 30
clear_button_enabled = true
placeholder_text = "Lobby Name"
caret_blink = true
caret_blink_speed = 0.5

[node name="ChooseMapBtn" type="Button" parent="MenuBackground/MarginContainer/VBoxContainer"]
margin_top = 151.0
margin_right = 1436.0
margin_bottom = 248.0
size_flags_horizontal = 3
custom_fonts/font = SubResource( 7 )
text = "Choose a Map"
align = 0

[node name="ScrollItemList" type="ScrollContainer" parent="MenuBackground/MarginContainer/VBoxContainer/ChooseMapBtn"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0

[node name="MapList" type="ItemList" parent="MenuBackground/MarginContainer/VBoxContainer/ChooseMapBtn/ScrollItemList"]
margin_right = 1436.0
margin_bottom = 97.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 8 )

[node name="PasswordField" type="LineEdit" parent="MenuBackground/MarginContainer/VBoxContainer"]
margin_top = 298.0
margin_right = 1436.0
margin_bottom = 399.0
size_flags_horizontal = 3
custom_colors/font_color_selected = Color( 0.784314, 0.784314, 0.784314, 1 )
custom_colors/font_color = Color( 0.784314, 0.784314, 0.784314, 1 )
custom_fonts/font = SubResource( 6 )
max_length = 30
secret = true
clear_button_enabled = true
placeholder_text = "Password (optional)"
caret_blink = true
caret_blink_speed = 0.5

[node name="VBoxContainer" type="VBoxContainer" parent="MenuBackground/MarginContainer/VBoxContainer"]
margin_top = 449.0
margin_right = 1436.0
margin_bottom = 664.0
size_flags_vertical = 3
custom_constants/separation = 30
alignment = 1

[node name="CreateBtn" type="Button" parent="MenuBackground/MarginContainer/VBoxContainer/VBoxContainer"]
margin_left = 598.0
margin_top = 11.0
margin_right = 837.0
margin_bottom = 92.0
grow_horizontal = 2
focus_mode = 0
size_flags_horizontal = 4
size_flags_vertical = 4
custom_colors/font_color = Color( 1, 0.964706, 0.333333, 1 )
custom_fonts/font = SubResource( 1 )
custom_styles/hover = SubResource( 2 )
custom_styles/pressed = SubResource( 3 )
custom_styles/focus = SubResource( 4 )
custom_styles/normal = SubResource( 5 )
enabled_focus_mode = 0
text = "Create"

[node name="BackBtn" type="Button" parent="MenuBackground/MarginContainer/VBoxContainer/VBoxContainer"]
margin_left = 638.0
margin_top = 122.0
margin_right = 797.0
margin_bottom = 203.0
grow_horizontal = 2
focus_mode = 0
size_flags_horizontal = 4
size_flags_vertical = 4
custom_colors/font_color = Color( 1, 0.964706, 0.333333, 1 )
custom_fonts/font = SubResource( 1 )
custom_styles/hover = SubResource( 2 )
custom_styles/pressed = SubResource( 3 )
custom_styles/focus = SubResource( 4 )
custom_styles/normal = SubResource( 5 )
enabled_focus_mode = 0
text = "Back"

[connection signal="pressed" from="MenuBackground/MarginContainer/VBoxContainer/ChooseMapBtn" to="." method="_on_ChooseMapBtn_pressed"]
[connection signal="item_selected" from="MenuBackground/MarginContainer/VBoxContainer/ChooseMapBtn/ScrollItemList/MapList" to="." method="_on_ItemList_item_selected"]
[connection signal="pressed" from="MenuBackground/MarginContainer/VBoxContainer/VBoxContainer/CreateBtn" to="." method="_on_CreateBtn_pressed"]
[connection signal="pressed" from="MenuBackground/MarginContainer/VBoxContainer/VBoxContainer/BackBtn" to="." method="_on_Back_pressed"]
